--- a/Pages/ManageDamaged.cshtml
+++ b/Pages/ManageDamaged.cshtml
@@ -147,7 +147,7 @@
 
 
     <div class="d-flex align-items-center justify-content-between">
-        <div>@Model.lblTotalItem : @Model.TotalItems</div>
+        <div></div>
         <div>
             @if (Model.TotalPages > 1)
             {
