--- a/Pages/AddRooms.cshtml
+++ b/Pages/AddRooms.cshtml
@@ -38,6 +38,25 @@
             showErrorNotification(errorMessageFromServer);
             </text>
         }
+        document.getElementById("StoreId").addEventListener("change", function () {
+            const selectedOption = this.options[this.selectedIndex];
+            const storetype = selectedOption.getAttribute("data-storetype");
+            const manager = selectedOption.getAttribute("data-manager");
+
+
+            document.getElementById("StoreType").value = storetype || '';
+            document.getElementById("ManagerName").value = manager || '';
+
+        });
+        
+        document.getElementById("KeeperJobNum").addEventListener("change", function () {
+            const selectedOption = this.options[this.selectedIndex];
+            const UserName = selectedOption.getAttribute("data-UserName");
+
+
+            document.getElementById("KeeperName").value = UserName || '';
+
+        });
     </script>
 }
 @{
@@ -81,19 +100,39 @@
 
                         <div class="col-lg-12 col-sm-12">
                             <div class="mb-4">
-                                <label for="storeNumber">@Model.lblStoreNumber</label>
+                                <label for="StoreId">@Model.lblStoreNumber</label>
                                 <select class="form-select" id="StoreId" name="StoreId">
+                                    <option value=""></option>
                                     @if (Model.Stores != null)
                                     {
                                         foreach (var item in Model.Stores)
                                         {
                                             if(item.IsActive == 1 && item.Ended == null){
-                                            <option value="@item.StoreId" selected="@(item.StoreId == Model.StoreId)">@item.StoreName</option>}
+                                            <option value="@item.StoreId" data-storetype="@item.StoreType" data-manager="@item.WarehouseManagerName" selected="@(item.StoreId == Model.StoreId)">@item.StoreName</option>}
                                         }
                                     }
                                 </select>
                                 
                             </div>
+
+                            <div class="mb-4">
+                                <label for="StoreType">@Model.lblWarehouseType</label>
+                                <input type="text" name="StoreType" class="form-control" id="StoreType"
+                                       value="@Model.StoreType" />
+                            </div>
+
+                            <div class="mb-4">
+                                <label for="ManagerName">@Model.lblManagerName</label>
+                                <input type="text" name="ManagerName" class="form-control" id="ManagerName"
+                                       value="@Model.ManagerName" />
+                            </div>
+
+                            <div class="mb-4">
+                                <label for="BuildingNumber">@Model.lblBuildingNumber</label>
+                                <input type="text" name="BuildingNumber" class="form-control" id="BuildingNumber"
+                                       value="@Model.BuildingNumber" />
+                            </div>
+
                             <div class="mb-4">
                                 <label for="roomNumber">@Model.lblRoomNumber</label>
                                 <input type="text" name="RoomNumber" class="form-control" id="roomNumber"
@@ -101,12 +140,73 @@
 
 
                             </div>
-                            <div class="mb-4">
+                            @* hiding roomNumber name as it is not in ppt *@
+                            @* <div class="mb-4">
                                 <label for="roomName">@Model.lblRoomName</label>
                                 <input type="text" name="RoomName" value="@Model.RoomName" class="form-control"
                                        id="roomName">
 
+                            </div> *@
+
+                            <div class="mb-4">
+                                <label for="RoomDesc">@Model.lblRoomDesc</label>
+                                <input type="text" name="RoomDesc" class="form-control" id="RoomDesc"
+                                       value="@Model.RoomDesc" />
                             </div>
+                         
+                            <div class="mb-4">
+                                <label for="NoOfShelves">@Model.lblNoOfShelves</label>
+                                <input type="number" name="NoOfShelves" class="form-control" id="NoOfShelves"
+                                       value="@Model.NoOfShelves" />
+                            </div>
+
+                           
+
+                             @* Warehouse Keeper JobNumber  *@
+                            <div class="mb-4">
+                                    <label class="my-1 me-2" for="KeeperJobNum">@Model.lblKeeperJobNum</label>
+                                    <select class="form-select" id="KeeperJobNum" name="KeeperJobNum"
+                                        aria-label="Default select example">
+                                        <option value=""></option>
+                                        
+                                        
+                                    @if (Model.KeeperGroupsList != null)
+                                    {
+                                        foreach (var item in Model.KeeperGroupsList)
+                                        {
+                                            <option value="@item.JobNumber" data-UserName="@item.UserName">@item.JobNumber</option>
+                                        }
+                                    }
+
+                                    </select>
+                            </div>
+
+                            <div class="mb-4">
+                                <label for="KeeperName">@Model.lblKeeperName</label>
+                                <input type="text" name="KeeperName" class="form-control" id="KeeperName"
+                                       value="@Model.KeeperName" />
+                            </div>
+
+                             @* Room status *@
+                            <div class="mb-4">
+                                <p>@Model.lblRoomStatus</p>
+
+                                <div class="form-check">
+                                    <input id="Open" class="form-check-input" type="radio" name="Status" value="Open" 
+                                       />
+                                    <label class="form-check-label" for="Open">
+                                        @Model.lblOpen
+                                    </label>
+                                </div>
+
+                                <div class="form-check">
+                                    <input id="Closed" class="form-check-input" type="radio" name="Status" value="Closed"
+                                        />
+                                    <label class="form-check-label" for="Closed">
+                                        @Model.lblClosed
+                                    </label>
+                                </div>
+                            </div> 
                             <div class="mb-4">
 
 
