--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -96,7 +96,7 @@
                 <li class="nav-item  @(Context.Request.Path == "/Notifications" ? "active" : "") ">
                     <a asp-area="" asp-page="/Notifications" class="nav-link sidebar-link">
                         <span class="sidebar-icon">
-                            <img class="icon icon-xs mx-1" src="images/home.png" />
+                            <img class="icon icon-xs mx-1" src="images/eye-grey.png" />
                         </span>
                         <span class="sidebar-text">@Model.lblNotifications</span>
                     </a>
