--- a/Pages/EditStore.cshtml
+++ b/Pages/EditStore.cshtml
@@ -4,46 +4,46 @@
 {
     <script type="text/javascript" language="javascript">
         const notyf = new Notyf({
-            position: {
-                x: 'center',
-                y: 'top',
-            },
-            types: [
-                {
-                    type: 'error',
-                    background: '#e3392c',
-                    icon: {
-                        className: 'fas fa-times',
-                        tagName: 'span',
-                        color: '#000000'
-                    },
-                    dismissible: true,
-                    duration: 0,
-                    ripple: true
-                }
-            ]
+        position: {
+        x: 'center',
+        y: 'top',
+        },
+        types: [
+        {
+        type: 'error',
+        background: '#e3392c',
+        icon: {
+        className: 'fas fa-times',
+        tagName: 'span',
+        color: '#000000'
+        },
+        dismissible: true,
+        duration: 0,
+        ripple: true
+        }
+        ]
         });
 
         function showErrorNotification(message) {
-            notyf.open({
-                type: 'error',
-                message: message
-            });
+        notyf.open({
+        type: 'error',
+        message: message
+        });
         }
 
         @if (!string.IsNullOrEmpty(Model.ErrorMsg))
         {
             <text>
-                    var errorMessageFromServer = @Html.Raw(Json.Serialize(Model.ErrorMsg));
-                    showErrorNotification(errorMessageFromServer);
+                var errorMessageFromServer = @Html.Raw(Json.Serialize(Model.ErrorMsg));
+                showErrorNotification(errorMessageFromServer);
             </text>
         }
 
-         document.getElementById("ManagerName").addEventListener("change", function () {
-            const selectedOption = this.options[this.selectedIndex];
-            const jobNumber = selectedOption.getAttribute("data-jobnumber");
+        document.getElementById("ManagerName").addEventListener("change", function () {
+        const selectedOption = this.options[this.selectedIndex];
+        const jobNumber = selectedOption.getAttribute("data-jobnumber");
 
-            document.getElementById("ManagerJobNumber").value = jobNumber || '';
+        document.getElementById("ManagerJobNumber").value = jobNumber || '';
         });
     </script>
 }
@@ -52,7 +52,7 @@
 
         <div class="d-flex justify-content-between w-100 flex-wrap">
             <div class="mb-3 mb-lg-0">
-                 <nav aria-label="breadcrumb">
+                <nav aria-label="breadcrumb">
                     <ol class="breadcrumb bg-transparent p-2 mb-0">
                         <li class="breadcrumb-item d-flex align-items-center">
                             <img src="images/home.png" alt="Home" width="16" height="16" class="me-2" />
@@ -69,7 +69,7 @@
                     </ol>
                 </nav>
                 <h1 class="h4">@Model.lblUpdateStore</h1>
-               <!-- <p class="mb-0">Dozens of reusable components built to provide buttons, alerts, popovers, and more.</p> -->
+                <!-- <p class="mb-0">Dozens of reusable components built to provide buttons, alerts, popovers, and more.</p> -->
             </div>
         </div>
     </div>
@@ -88,13 +88,14 @@
                                 <p>@Model.StoreType</p>
                                 <label class="my-1 me-2" for="StoreType">@Model.lblWarehouseType</label>
                                 <select class="form-select" id="StoreType" name="StoreType"
-                                        aria-label="Default select example" >
+                                aria-label="Default select example" >
                                     <option value=""></option>
-                                     @if (Model.StoreTypeList != null)
+                                    @if (Model.StoreTypeList != null)
                                     {
                                         foreach (var item in Model.StoreTypeList)
                                         {
-                                             var selectedAttr = item.Value == Model.StoreType ? "selected=\"selected\"" : "";
+                                            var selectedAttr = item.Value.Trim() == Model.StoreType.Trim() ? "selected=\"selected\"" : "";
+
                                             @:<option value="@item.Value" @Html.Raw(selectedAttr)>@item.Text</option>
                                         }
                                     }
