--- a/Pages/AddRooms.cshtml
+++ b/Pages/AddRooms.cshtml
@@ -99,7 +99,7 @@
 
 
                         <div class="col-lg-12 col-sm-12">
-                            <div class="mb-4">
+                            @* <div class="mb-4">
                                 <label for="StoreId">@Model.lblStoreNumber</label>
                                 <select class="form-select" id="StoreId" name="StoreId">
                                     <option value=""></option>
@@ -108,12 +108,12 @@
                                         foreach (var item in Model.Stores)
                                         {
                                             if(item.IsActive == 1 && item.Ended == null){
-                                            <option value="@item.StoreId" data-storetype="@item.StoreType" data-manager="@item.WarehouseManagerName" selected="@(item.StoreId == Model.StoreId)">@item.StoreName</option>}
+                                            <option value="@item.StoreId" data-storetype="@item.StoreType" data-manager="@item.WarehouseManagerID" selected="@(item.StoreId == Model.StoreId)">@item.StoreName</option>}
                                         }
                                     }
                                 </select>
                                 
-                            </div>
+                            </div> *@
 
                             <div class="mb-4">
                                 <label for="StoreType">@Model.lblWarehouseType</label>
